--- a/dashboard.html
+++ b/dashboard.html
@@ -125,7 +125,7 @@
     </div>
     
     <!-- Scripts -->
-    <script src="js/auth-system.js"></script>
+    <script src="js/auth-simple.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', async function() {
             console.log('Dashboard cargado...');
