--- a/admin.html
+++ b/admin.html
@@ -150,7 +150,7 @@
     </div>
     
     <!-- Scripts -->
-    <script src="js/auth-system.js"></script>
+    <script src="js/auth-simple.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', async function() {
             console.log('Admin panel cargado...');
