--- a/dashboard.html
+++ b/dashboard.html
@@ -558,8 +558,8 @@
         // ============================================
         class SimpleAuth {
             constructor() {
-                this.STORAGE_KEY = 'secure_stream_session';
-                this.DEVICE_KEY = 'secure_stream_device';
+                this.STORAGE_KEY = 'secure_stream_session_v3';
+                this.DEVICE_KEY = 'secure_stream_device_v3';
             }
             
             // Verificar sesión local
